修正题目 去重